# obs-studio

plugins/: CMakeLists.txt
plugins/obs-equi/: CMakeLists.txt  equiConvert-filter.c  equiRotate-filter.c  obs-equi.c
plugins/obs-equi/data/: equiConvert.effect  equiRotate.effect
